crates/assay-types/tests/snapshots/schema_snapshots__agent-evaluation-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "Confidence": {
      "description": "Agent confidence level in an evaluation.",
      "oneOf": [
        {
          "const": "high",
          "description": "High confidence — clear evidence supports the conclusion.",
          "type": "string"
        },
        {
          "const": "medium",
          "description": "Medium confidence — evidence is suggestive but not conclusive.",
          "type": "string"
        },
        {
          "const": "low",
          "description": "Low confidence — uncertain; evaluation may need human review.",
          "type": "string"
        }
      ]
    },
    "EvaluatorRole": {
      "description": "The role of the evaluator who produced a gate result.\n\nDetermines trust level and audit requirements:\n- `SelfEval` (\"self\"): the coding agent evaluates its own work (default for v0.2).\n- `Independent`: a separate agent evaluates (planned for v0.3).\n- `Human`: a human performed the evaluation.",
      "oneOf": [
        {
          "const": "self",
          "description": "The coding agent evaluates its own work.",
          "type": "string"
        },
        {
          "const": "independent",
          "description": "A separate, independent agent evaluates.",
          "type": "string"
        },
        {
          "const": "human",
          "description": "A human performed the evaluation.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "A structured evaluation produced by an agent for a single criterion.",
  "properties": {
    "confidence": {
      "anyOf": [
        {
          "$ref": "#/$defs/Confidence"
        },
        {
          "type": "null"
        }
      ],
      "description": "Agent's confidence level in the evaluation."
    },
    "evaluator_role": {
      "$ref": "#/$defs/EvaluatorRole",
      "description": "Role of the evaluator who produced this evaluation."
    },
    "evidence": {
      "description": "Concrete facts the agent observed (what was seen).",
      "type": "string"
    },
    "passed": {
      "description": "Whether the criterion passed according to this evaluation.",
      "type": "boolean"
    },
    "reasoning": {
      "description": "Why those facts lead to pass/fail (the agent's reasoning chain).",
      "type": "string"
    },
    "timestamp": {
      "description": "When this evaluation was produced.",
      "format": "date-time",
      "type": "string"
    }
  },
  "required": [
    "passed",
    "evidence",
    "reasoning",
    "evaluator_role",
    "timestamp"
  ],
  "title": "AgentEvaluation",
  "type": "object"
}
