crates/assay-types/tests/snapshots/schema_snapshots__agent-event-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "A normalized event from an agent session.\n\nProduced by parsing the streaming output of an agent CLI (e.g. Claude's\nNDJSON stream). Non-Claude adapters emit a single synthetic\n[`AgentEvent::SessionStopped`] on exit.",
  "oneOf": [
    {
      "description": "A tool was invoked by the agent.",
      "properties": {
        "input_json": {
          "description": "JSON-encoded tool input parameters.",
          "type": "string"
        },
        "name": {
          "description": "Tool name (e.g. `\"bash\"`, `\"edit\"`, `\"read\"`).",
          "type": "string"
        },
        "type": {
          "const": "tool_called",
          "type": "string"
        }
      },
      "required": [
        "type",
        "name",
        "input_json"
      ],
      "type": "object"
    },
    {
      "description": "A tool returned a result to the agent.",
      "properties": {
        "is_error": {
          "description": "Whether the tool invocation resulted in an error.",
          "type": "boolean"
        },
        "name": {
          "description": "Tool name that produced this result.",
          "type": "string"
        },
        "output": {
          "description": "Tool output content (may be truncated by the caller).",
          "type": "string"
        },
        "type": {
          "const": "tool_result",
          "type": "string"
        }
      },
      "required": [
        "type",
        "name",
        "output",
        "is_error"
      ],
      "type": "object"
    },
    {
      "description": "A conversation turn boundary.",
      "properties": {
        "turn_index": {
          "description": "Zero-based turn index within the session.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "type": {
          "const": "turn_ended",
          "type": "string"
        }
      },
      "required": [
        "type",
        "turn_index"
      ],
      "type": "object"
    },
    {
      "description": "The agent session has stopped.",
      "properties": {
        "cost_usd": {
          "description": "Total API cost in USD, if reported by the agent.",
          "format": "double",
          "type": [
            "number",
            "null"
          ]
        },
        "num_turns": {
          "description": "Number of conversation turns completed.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "reason": {
          "description": "Stop reason (e.g. `\"success\"`, `\"error\"`, `\"max_turns\"`).",
          "type": "string"
        },
        "type": {
          "const": "session_stopped",
          "type": "string"
        }
      },
      "required": [
        "type",
        "reason",
        "num_turns"
      ],
      "type": "object"
    }
  ],
  "title": "AgentEvent"
}
