crates/assay-types/tests/snapshots/schema_snapshots__assay-server-state-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "RunSummary": {
      "additionalProperties": false,
      "description": "Summary of a single active orchestrator run, reported in\n[`AssayServerState`].",
      "properties": {
        "run_id": {
          "description": "Unique run identifier.",
          "type": "string"
        },
        "session_count": {
          "description": "Number of sessions in this run.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "spec_name": {
          "description": "Spec name being executed.",
          "type": "string"
        },
        "started_at": {
          "description": "When the run started (UTC).",
          "format": "date-time",
          "type": "string"
        }
      },
      "required": [
        "run_id",
        "spec_name",
        "session_count",
        "started_at"
      ],
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Global server state returned by `GET /api/v1/state`.",
  "properties": {
    "active_runs": {
      "description": "Currently active orchestrator runs.",
      "items": {
        "$ref": "#/$defs/RunSummary"
      },
      "type": "array"
    },
    "uptime_secs": {
      "description": "Seconds since the MCP server started.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    }
  },
  "required": [
    "active_runs",
    "uptime_secs"
  ],
  "title": "AssayServerState",
  "type": "object"
}
