crates/assay-types/tests/snapshots/schema_snapshots__confidence-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Agent confidence level in an evaluation.",
  "oneOf": [
    {
      "const": "high",
      "description": "High confidence — clear evidence supports the conclusion.",
      "type": "string"
    },
    {
      "const": "medium",
      "description": "Medium confidence — evidence is suggestive but not conclusive.",
      "type": "string"
    },
    {
      "const": "low",
      "description": "Low confidence — uncertain; evaluation may need human review.",
      "type": "string"
    }
  ],
  "title": "Confidence"
}
