crates/assay-types/tests/snapshots/schema_snapshots__config-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "GatesConfig": {
      "additionalProperties": false,
      "description": "Gate execution configuration.",
      "properties": {
        "default_timeout": {
          "default": 300,
          "description": "Default timeout for gate commands in seconds. Defaults to 300.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "evaluator_model": {
          "default": "sonnet",
          "description": "Default model for the evaluator subprocess. Defaults to `\"sonnet\"`.",
          "type": "string"
        },
        "evaluator_retries": {
          "default": 1,
          "description": "Maximum retries for transient evaluator subprocess failures. Defaults to 1.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "evaluator_timeout": {
          "default": 120,
          "description": "Evaluator subprocess timeout in seconds. Defaults to 120.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "max_history": {
          "description": "Maximum number of run history files to retain per spec.\nWhen set, oldest files beyond this limit are pruned on each save.\nA value of `0` means unlimited (no pruning). Defaults to `None` (no pruning).",
          "format": "uint",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "working_dir": {
          "description": "Working directory for gate execution.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "type": "object"
    },
    "GuardConfig": {
      "additionalProperties": false,
      "description": "Guard daemon configuration.\n\nControls thresholds, polling interval, and circuit breaker behavior\nfor the background context protection daemon.",
      "properties": {
        "hard_threshold": {
          "default": 0.8,
          "description": "Hard threshold as percentage of context window (0.0-1.0). Default: 0.8.",
          "format": "double",
          "type": "number"
        },
        "hard_threshold_bytes": {
          "description": "Hard threshold as file size in bytes. Optional, whichever fires first wins.",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "max_recoveries": {
          "default": 3,
          "description": "Maximum recovery attempts before circuit breaker trips. Default: 3.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "poll_interval_secs": {
          "default": 5,
          "description": "Polling interval in seconds. Default: 5.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "recovery_window_secs": {
          "default": 600,
          "description": "Time window in seconds for counting recoveries. Default: 600 (10 minutes).",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "soft_threshold": {
          "default": 0.6,
          "description": "Soft threshold as percentage of context window (0.0-1.0). Default: 0.6.",
          "format": "double",
          "type": "number"
        },
        "soft_threshold_bytes": {
          "description": "Soft threshold as file size in bytes. Optional, whichever fires first wins.",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        }
      },
      "type": "object"
    },
    "ProviderConfig": {
      "additionalProperties": false,
      "description": "AI provider and model configuration.\n\nAll fields are optional and omitted from serialized output when absent.",
      "properties": {
        "execution_model": {
          "description": "Model to use for execution tasks.",
          "type": [
            "string",
            "null"
          ]
        },
        "planning_model": {
          "description": "Model to use for planning tasks (e.g. \"claude-opus-4-5\").",
          "type": [
            "string",
            "null"
          ]
        },
        "provider": {
          "$ref": "#/$defs/ProviderKind",
          "default": "anthropic",
          "description": "Which AI provider to use. Defaults to Anthropic."
        },
        "review_model": {
          "description": "Model to use for review tasks.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "type": "object"
    },
    "ProviderKind": {
      "description": "AI provider selection.",
      "oneOf": [
        {
          "const": "anthropic",
          "description": "Anthropic (Claude).",
          "type": "string"
        },
        {
          "const": "open_ai",
          "description": "OpenAI (GPT).",
          "type": "string"
        },
        {
          "const": "ollama",
          "description": "Ollama (local models).",
          "type": "string"
        }
      ]
    },
    "SessionsConfig": {
      "additionalProperties": false,
      "description": "Session management configuration.",
      "properties": {
        "stale_threshold_secs": {
          "default": 3600,
          "description": "Staleness threshold in seconds for recovery sweep.\nSessions in the `AgentRunning` phase older than this are marked abandoned on startup.\nDefault: 3600 (1 hour). Must be greater than zero.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        }
      },
      "type": "object"
    },
    "WorktreeConfig": {
      "additionalProperties": false,
      "description": "Configuration for worktree management.\n\nLoaded from the `[worktree]` section of `.assay/config.toml`.",
      "properties": {
        "base_dir": {
          "default": "",
          "description": "Base directory for worktrees.\nRelative paths are resolved from the project root.\nDefault: `\"../<project-name>-worktrees/\"` (computed at runtime when empty).\n\nStored as `String` rather than `PathBuf` because this is a serialized config field\nand changing the type would be a schema-breaking change.",
          "type": "string"
        }
      },
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Top-level configuration for an Assay project.\n\nLoaded from `.assay/config.toml`.",
  "properties": {
    "gates": {
      "anyOf": [
        {
          "$ref": "#/$defs/GatesConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Gate execution configuration."
    },
    "guard": {
      "anyOf": [
        {
          "$ref": "#/$defs/GuardConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Guard daemon configuration."
    },
    "project_name": {
      "description": "Project name (required, non-empty after trim).",
      "type": "string"
    },
    "provider": {
      "anyOf": [
        {
          "$ref": "#/$defs/ProviderConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "AI provider configuration (Anthropic, OpenAI, Ollama).\nOmit to use the default provider (Anthropic)."
    },
    "sessions": {
      "anyOf": [
        {
          "$ref": "#/$defs/SessionsConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Session management configuration."
    },
    "specs_dir": {
      "default": "specs/",
      "description": "Directory containing spec files, relative to `.assay/`.\nDefaults to `\"specs/\"`.",
      "type": "string"
    },
    "worktree": {
      "anyOf": [
        {
          "$ref": "#/$defs/WorktreeConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Worktree management configuration."
    }
  },
  "required": [
    "project_name"
  ],
  "title": "Config",
  "type": "object"
}
