crates/assay-types/tests/snapshots/schema_snapshots__conflict-action-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Action to take when a merge conflict is detected.\n\nPassed to the conflict handler closure. Not `deny_unknown_fields` since\nit is operational (not a persistence contract), but has serde for logging.",
  "oneOf": [
    {
      "additionalProperties": false,
      "description": "Conflict was resolved; the provided string is the resolution commit SHA.",
      "properties": {
        "resolved": {
          "type": "string"
        }
      },
      "required": [
        "resolved"
      ],
      "type": "object"
    },
    {
      "const": "skip",
      "description": "Skip this session and continue with the next.",
      "type": "string"
    },
    {
      "const": "abort",
      "description": "Abort the entire merge sequence.",
      "type": "string"
    }
  ],
  "title": "ConflictAction"
}
