crates/assay-types/tests/snapshots/schema_snapshots__conflict-file-content-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Original or resolved content of a single file captured during conflict resolution.\n\nUsed in [`ConflictResolution`] to store both the original conflict-marker content\nand the AI-resolved content for each conflicted file.",
  "properties": {
    "content": {
      "description": "Full file content (with conflict markers for originals; resolved for outputs).",
      "type": "string"
    },
    "path": {
      "description": "Path relative to the repository root.",
      "type": "string"
    }
  },
  "required": [
    "path",
    "content"
  ],
  "title": "ConflictFileContent",
  "type": "object"
}
